--- a/docker/notebooks/interactive_notebook.ipynb
+++ b/docker/notebooks/interactive_notebook.ipynb
@@ -25,7 +25,7 @@
     {
      "data": {
       "text/html": [
-       "<img src=\"http://localhost:8888/files/img/pycon.png\">"
+       "<img src=\"http://localhost:8888/files/pyconuk-2016-workshop/img/pycon.png\">"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -37,7 +37,7 @@
    ],
    "source": [
     "%%html\n",
-    "<img src=\"http://localhost:8888/files/img/pycon.png\">"
+    "<img src=\"http://localhost:8888/files/pyconuk-2016-workshop/img/pycon.png\">"
    ]
   },
   {
